--- a/src/auth/login.css
+++ b/src/auth/login.css
@@ -7,11 +7,11 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(135deg, #f0f4f8, #d9e2ec);
-  background-color: #4c8bf5;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-image: url('vector-cloud.jpg');
+  background-size: cover;
 }
 
 .login-box {
@@ -66,4 +66,8 @@
 
 .login-box button:hover {
   background-color: #3a6fd9;
+}
+
+.response-message {
+  color:rgb(45, 83, 154)
 }
